This file holds the changes of the AIT QKD R10 throughout the versions
======================================================================


Changes from 9.9999.6 to 9.9999.7
---------------------------------

* drop of boost::shared_ptr and boost::exception

    boost::shared_ptr and boost::exception have been dropped in favor
    for the std:: counterparts. These are easier to understand
    and reduce the dependency to boost (a little).

* qkd-resize does now include all bits of disclosed keys

    In previous versions, qkd-resize did not include the key bits
    of disclosed keys. Such keys might have been disclosed due to
    error correction, whenever the error correction fails. Then
    the QBER of this key should be included in the privacy 
    amplification to follow. To do so, the key is disclosed to
    let the QKD pipeline identify the number of errors in the key.
    Then the key is forwarded (with state DISCLOSED) and disclosed
    bits equals size of key to the next module in the pipe.

    qkd-resize does now aggregate keys to form a new big key for
    privacy amplification. Here the QBER and the disclosed bits of 
    all keys are taken into account to form a new key. This also
    includes the bits of once disclosed keys.

* new tool: qkd-key-compare

    The new command line tool qkd-key-compare compares two key
    streams and writes the result to stdout.

* addressing a number of spelling errors in the documentation and source code


Changes from 9.9999.5 to 9.9999.6
---------------------------------

* revamp of key synchronization

    New key sync protocol introduces a new step when picking
    a key. This is yet more stable and recovers broken 
    pipelines at either side.


Changes from 9.9999.4 to 9.9999.5
---------------------------------

* writing keys to void pipe_out does now increment key stats

    Writing keys to void (empty) pipe_out connection does now
    increment key_bits_outgoing, keys_outgoing and the